syntax = "proto3";

package golem.rib;

import "golem/rib/rib_input.proto";
import "golem/rib/rib_byte_code.proto";
import "golem/rib/worker_functions_in_rib.proto";
import "golem/rib/rib_output.proto";

message CompilerOutput {
    RibByteCode byte_code = 1;
    RibInputType rib_input = 2;
    optional WorkerFunctionsInRib worker_invoke_calls = 3;
    optional RibOutputType rib_output = 4;
}